Creacion nav y un poco de estilo

--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech 101</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <header>
+      <a>
+        <img
+          class="cabecera"
+          src="https://tech101.io/static/logo-8da5c31baf268ed3ad5857560a6732af.png"
+        />
+      </a>
+      <a>Registro</a>
+    </header>
     <nav class="menu">
-        <ul>
-            <a href="#">Inicio</a>
-            <a href="#">Sobre nosostros</a>
-            <a href="#">Contacto</a>
-        </ul>
+      <ul>
+        <a href="#">Inicio</a>
+        <a href="#">Sobre nosostros</a>
+        <a href="#">Contacto</a>
+      </ul>
     </nav>
-    <h1>Únete a la comunidad</h1>
-    <h2>Somos programadores enseñando a las nuevas genereaciones de programadores</h2>
-</body>
+    <div class="portada">
+      <h1>Únete a la comunidad</h1>
+      <h2>
+        Somos programadores enseñando a las nuevas genereaciones de
+        programadores
+      </h2>
+
+      <div class="boton1">
+        <a>Conoce la oferta educativa</a>
+      </div>
+    </div>
+  </body>
 </html>
