Ajustamos la seccion de la portada y cambiamos la tipogrfía

--- a/index.html
+++ b/index.html
@@ -14,24 +14,19 @@
           src="https://tech101.io/static/logo-8da5c31baf268ed3ad5857560a6732af.png"
         />
       </a>
-      <a>Registro</a>
+      <a class="registro">Registro</a>
     </header>
-    <nav class="menu">
-      <ul>
-        <a href="#">Inicio</a>
-        <a href="#">Sobre nosostros</a>
-        <a href="#">Contacto</a>
-      </ul>
-    </nav>
     <div class="portada">
-      <h1>Únete a la comunidad</h1>
-      <h2>
-        Somos programadores enseñando a las nuevas genereaciones de
+      <h1>Únete a la <br> comunidad</h1>
+      <p>
+        Somos programadores enseñando a las <br> nuevas genereaciones de
         programadores
-      </h2>
+      </p>
 
       <div class="boton1">
-        <a>Conoce la oferta educativa</a>
+        <button>
+          <a href="#">Conoce la oferta educativa</a>
+        </button>
       </div>
     </div>
   </body>
