[ADD] main.css, se modifico h1 y p y se dio margen

--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech 101</title>
-    <link rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <header>
-      <a>
-        <img
-          class="cabecera"
-          src="https://tech101.io/static/logo-8da5c31baf268ed3ad5857560a6732af.png"
-        />
-      </a>
-      <a class="registro">Registro</a>
-    </header>
-    <div class="portada">
-      <h1>Únete a la <br> comunidad</h1>
-      <p>
-        Somos programadores enseñando a las <br> nuevas genereaciones de
-        programadores
-      </p>
 
-      <div class="boton1">
-        <button>
-          <a href="#">Conoce la oferta educativa</a>
-        </button>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="" content="width=device-width, initial-scale=1.0" />
+  <title>Tech 101</title>
+  <link rel="stylesheet" href="main.css" />
+</head>
+
+<body>
+  <header>
+    <a>
+      <img class="cabecera" src="https://tech101.io/static/logo-8da5c31baf268ed3ad5857560a6732af.png" />
+    </a>
+    <a class="registro">Registro</a>
+  </header>
+  <div class="portada">
+    <h1>Únete a la <br> comunidad</h1>
+    <p>
+      Somos programadores enseñando a las <br> nuevas genereaciones de
+      programadores
+    </p>
+
+    <div class="boton1">
+      <button>
+        <a href="#">Conoce la oferta educativa</a>
+      </button>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
